update docker-compose, adjust topic names

--- a/env.yml
+++ b/env.yml
@@ -80,9 +80,9 @@ services:
       kafka-topics --bootstrap-server kafka1:19092 --list
 
       echo -e 'Creating kafka topics ...'
-      kafka-topics --bootstrap-server kafka1:19092 --create --if-not-exists --topic source-data --replication-factor 3 --partitions 10
-      kafka-topics --bootstrap-server kafka1:19092 --create --if-not-exists --topic valid-data --replication-factor 3 --partitions 10
-      kafka-topics --bootstrap-server kafka1:19092 --create --if-not-exists --topic dlq-data --replication-factor 3 --partitions 10
+      kafka-topics --bootstrap-server kafka1:19092 --create --if-not-exists --topic com-example-users --replication-factor 3 --partitions 10
+      kafka-topics --bootstrap-server kafka1:19092 --create --if-not-exists --topic com-example-users-retry --replication-factor 3 --partitions 10
+      kafka-topics --bootstrap-server kafka1:19092 --create --if-not-exists --topic com-example-dlq --replication-factor 3 --partitions 10
 
       echo -e 'Successfully created topics, list of the topics:'
       kafka-topics --bootstrap-server kafka1:19092 --list
@@ -111,7 +111,7 @@ services:
       CONNECT_PLUGIN_PATH: '/usr/share/java,/etc/kafka-connect/jars'
       CONNECT_CONFLUENT_TOPIC_REPLICATION_FACTOR: 1
     depends_on:
-      - kafka
+      - kafka-broker-1
 
   mongo:
     image: mongo
@@ -160,4 +160,4 @@ services:
                 - name: "connect"
                   url: "http://host.docker.internal:8083"
     links:
-      - kafka
+      - kafka-broker-1
