[validation-service] initial commit & adjust topics

--- a/env.yml
+++ b/env.yml
@@ -83,6 +83,7 @@ services:
       kafka-topics --bootstrap-server kafka1:19092 --create --if-not-exists --topic com-example-users --replication-factor 3 --partitions 10
       kafka-topics --bootstrap-server kafka1:19092 --create --if-not-exists --topic com-example-users-retry --replication-factor 3 --partitions 10
       kafka-topics --bootstrap-server kafka1:19092 --create --if-not-exists --topic com-example-dlq --replication-factor 3 --partitions 10
+      kafka-topics --bootstrap-server kafka1:19092 --create --if-not-exists --topic com-example-valid-users --replication-factor 3 --partitions 10
 
       echo -e 'Successfully created topics, list of the topics:'
       kafka-topics --bootstrap-server kafka1:19092 --list
