ingress-controller: adjust tests, add swagger

--- a/ingress-controller/build.gradle
+++ b/ingress-controller/build.gradle
@@ -20,11 +20,15 @@ configurations {
 
 ext {
     testcontainersVersion = "1.17.6"
+    springdocVersion = '1.6.14'
 }
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation 'org.springframework.kafka:spring-kafka'
+    implementation "org.springdoc:springdoc-openapi-ui:${springdocVersion}"
+    implementation "org.springdoc:springdoc-openapi-security:${springdocVersion}"
 
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
