--- a/ingress-controller/build.gradle
+++ b/ingress-controller/build.gradle
@@ -25,6 +25,7 @@ ext {
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation 'org.springframework.kafka:spring-kafka'
     implementation "org.springdoc:springdoc-openapi-ui:${springdocVersion}"
