--- a/ingress-controller/src/main/resources/application.yml
+++ b/ingress-controller/src/main/resources/application.yml
@@ -1,6 +1,16 @@
 server:
   port: ${bootstrap-config.app.port}
 
+spring:
+  autoconfigure:
+    exclude: org.springframework.boot.autoconfigure.security.servlet.UserDetailsServiceAutoConfiguration
+  security:
+    oauth2:
+      client:
+        registration:
+          custom:
+            client_name: ingress-controller
+
 springdoc:
   api-docs:
     path: /api-docs
