authentication-service: add framework and implement initial db structure

--- a/env.yml
+++ b/env.yml
@@ -1,7 +1,7 @@
 version: '3.8'
 services:
   zookeeper-server-1:
-    image: confluentinc/cp-zookeeper:7.2.2
+    image: confluentinc/cp-zookeeper:7.3.1
     container_name: zookeeper-server-1
     hostname: zookeeper
     ports:
@@ -11,7 +11,7 @@ services:
       ZOOKEEPER_TICK_TIME: 2000
 
   kafka-broker-1:
-    image: confluentinc/cp-kafka:7.2.2
+    image: confluentinc/cp-kafka:7.3.1
     container_name: kafka-broker-1
     hostname: kafka1
     ports:
@@ -30,7 +30,7 @@ services:
       - zookeeper-server-1
 
   kafka-broker-2:
-    image: confluentinc/cp-kafka:7.2.2
+    image: confluentinc/cp-kafka:7.3.1
     container_name: kafka-broker-2
     hostname: kafka2
     ports:
@@ -49,7 +49,7 @@ services:
       - zookeeper-server-1
 
   kafka-broker-3:
-    image: confluentinc/cp-kafka:7.2.2
+    image: confluentinc/cp-kafka:7.3.1
     container_name: kafka-broker-3
     hostname: kafka3
     ports:
@@ -66,7 +66,6 @@ services:
       KAFKA_NUM_PARTITIONS: 10
     depends_on:
       - zookeeper-server-1
-
 
   init-kafka:
     image: confluentinc/cp-kafka:7.2.2
@@ -88,44 +87,43 @@ services:
       kafka-topics --bootstrap-server kafka1:19092 --list
       "
 
-  kafka-connect:
-    image: kafka-connect
-    container_name: kafka-connect
-    ports:
-      - '8083:8083'
-    environment:
-      CONNECT_BOOTSTRAP_SERVERS: kafka1:19092
-      CONNECT_REST_ADVERTISED_HOST_NAME: connect
-      CONNECT_REST_PORT: 8083
-      CONNECT_GROUP_ID: compose-connect-group
-      CONNECT_CONFIG_STORAGE_TOPIC: docker-connect-configs
-      CONNECT_OFFSET_STORAGE_TOPIC: docker-connect-offsets
-      CONNECT_STATUS_STORAGE_TOPIC: docker-connect-status
-      CONNECT_KEY_CONVERTER: org.apache.kafka.connect.json.JsonConverter
-      CONNECT_VALUE_CONVERTER: org.apache.kafka.connect.json.JsonConverter
-      CONNECT_INTERNAL_KEY_CONVERTER: org.apache.kafka.connect.json.JsonConverter
-      CONNECT_INTERNAL_VALUE_CONVERTER: org.apache.kafka.connect.json.JsonConverter
-      CONNECT_CONFIG_STORAGE_REPLICATION_FACTOR: 1
-      CONNECT_OFFSET_STORAGE_REPLICATION_FACTOR: 1
-      CONNECT_STATUS_STORAGE_REPLICATION_FACTOR: 1
-      CONNECT_PLUGIN_PATH: '/usr/share/java,/etc/kafka-connect/jars'
-      CONNECT_CONFLUENT_TOPIC_REPLICATION_FACTOR: 1
-    depends_on:
-      - kafka-broker-1
-
+#  kafka-connect:
+#    image: kafka-connect
+#    container_name: kafka-connect
+#    ports:
+#      - '8083:8083'
+#    environment:
+#      CONNECT_BOOTSTRAP_SERVERS: kafka1:19092
+#      CONNECT_REST_ADVERTISED_HOST_NAME: connect
+#      CONNECT_REST_PORT: 8083
+#      CONNECT_GROUP_ID: compose-connect-group
+#      CONNECT_CONFIG_STORAGE_TOPIC: docker-connect-configs
+#      CONNECT_OFFSET_STORAGE_TOPIC: docker-connect-offsets
+#      CONNECT_STATUS_STORAGE_TOPIC: docker-connect-status
+#      CONNECT_KEY_CONVERTER: org.apache.kafka.connect.json.JsonConverter
+#      CONNECT_VALUE_CONVERTER: org.apache.kafka.connect.json.JsonConverter
+#      CONNECT_INTERNAL_KEY_CONVERTER: org.apache.kafka.connect.json.JsonConverter
+#      CONNECT_INTERNAL_VALUE_CONVERTER: org.apache.kafka.connect.json.JsonConverter
+#      CONNECT_CONFIG_STORAGE_REPLICATION_FACTOR: 1
+#      CONNECT_OFFSET_STORAGE_REPLICATION_FACTOR: 1
+#      CONNECT_STATUS_STORAGE_REPLICATION_FACTOR: 1
+#      CONNECT_PLUGIN_PATH: '/usr/share/java,/etc/kafka-connect/jars'
+#      CONNECT_CONFLUENT_TOPIC_REPLICATION_FACTOR: 1
+#    depends_on:
+#      - kafka-broker-1
 
   postgres:
-    image: postgres:14.1
+    image: postgres:15.1
     container_name: postgres
     ports:
       - '5432:5432'
     environment:
-      POSTGRES_DB: entities
+      POSTGRES_DB: auth-service
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
 
   pg-admin:
-    image: dpage/pgadmin4:6.14
+    image: dpage/pgadmin4:6.18
     container_name: pg-admin
     ports:
       - '5050:80'
